# task-manager

./: .cursorrules  CLAUDE.md  Cargo.toml  README.md  Summary.md  prd.md  tasks.db
.claude/commands/: kill-app.md  start-app.md
bruno/: Complete Task.bru  Create Task.bru  Delete Task.bru  List Tasks.bru  Toggle Task.bru  Update Task.bru  bruno.json  collection.bru
bruno/environments/: local.bru
src/: db.rs  handlers.rs  main.rs  models.rs
templates/: index.html
