[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["fs", "cors"] }
